<resources>
    <string name="app_name">Cooking</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUP">Sign Up</string>
    <string name="userName">username</string>
    <string name="confirmPassword">confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="forget_password">forget Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="plan">Plan</string>
    <string name="profile">Profile</string>
    <string name="searchbar_hint">Enter Meal Name</string>
    <string name="this_week">Your Plan</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="my_fav_meals">Favorite Meals</string>
    <string name="your_profile">Profile</string>
    <string name="by_country">Meals By Country</string>
    <string name="by_category">Meals By Category</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="your_plan">Your Plan</string>
    <string name="name">Name</string>
    <string name="add_to_calender">Add To Plan</string>
    <string name="image">image</string>
    <string name="category">Category</string>
    <string name="instructions">Instructions</string>
    <string name="scrolltext">Scroll Text</string>
    <string name="ingredients">Ingredients</string>
    <string name="video">Video</string>
    <string name="preparation_video">preparation video</string>
    <string name="step">Steps</string>
    <string name="ingredient">Ingredient</string>
    <string name="search_by_ingredients">Search by Ingredients</string>
    <string name="search_by_category">Search by Category</string>
    <string name="search_by_country">Search By Country</string>
    <string name="continue_as_guest">Continue as Guest</string>

    <string-array name="flags">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.freepnglogos.com/uploads/globe-png/globe-icon-aquanox-icons-softiconsm-34.png</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>

    </string-array>
</resources>