<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/house_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/search" />
    <item
        android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/favorite_icon"
        android:title="@string/favorite" />
    <item
        android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/calendar_icon"
        android:title="@string/plan" />
    <item
        android:id="@+id/item_5"
        android:enabled="true"
        android:icon="@drawable/usercircle_icon"
        android:title="@string/profile" />
</menu>

