<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".search.view.SearchFragment">
`



    <ScrollView
        android:id="@+id/home_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_bar"
            app:layout_constraintCircleRadius="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_20sdp"
            android:layout_margin="@dimen/_20sdp"
            android:background="#EDD8D5D0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_ingredients"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingr_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/ingredients"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_category"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textStyle="bold"

            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/ingredients_card"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_country"
            android:textSize="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/country_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/ingredients_card"
            />
    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
